--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p><a href="https://pypi.org/project/tweety"><img alt="PyPI Version" src="https://img.shields.io/pypi/v/tweety.svg" /></a>
 <a href="https://coveralls.io/github/santhoshse7en/tweety?branch=master"><img alt="Coverage Status" src="https://coveralls.io/repos/github/santhoshse7en/tweety/badge.svg?branch=master" /></a>
 <a href="https://pypi.python.org/pypi/tweety/"><img alt="License" src="https://img.shields.io/pypi/l/tweety.svg" /></a>
-<a href="https://santhoshse7en.github.io/tweety_doc"><img alt="Documentation Status" src="https://readthedocs.org/projects/pip/badge/?version=latest&amp;style=plastic" /></a></p>
+<a href="https://santhoshse7en.github.io/tweety_doc"><img alt="Documentation Status" src="https://readthedocs.org/projects/pip/badge/?version=latest&amp;style=flat" /></a></p>
 <h2 id="getting-started">Getting started</h2>
 <h2 id="introduction-to-tweety">Introduction to tweety</h2>
 <p>If you are new to tweety, this is the place to begin. The goal of this tutorial is to get you set-up and rolling with tweety. Twitter's API is annoying to work with, and has lots of limitations. tweety scrape all the tweets using python and selenium - No API rate limits. No restrictions. Extremely fast.</p>
@@ -202,5 +202,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-05-22 05:38:58
+Build Date UTC : 2019-05-22 05:42:20
 -->
