--- a/installation/index.html
+++ b/installation/index.html
@@ -112,7 +112,7 @@
             <div class="section">
               
                 <h1 id="installation">Installation</h1>
-<p>This part of the documentation covers the installation of newspaper. The first step to using any software package is getting it properly installed.</p>
+<p>This part of the documentation covers the installation of tweety. The first step to using any software package is getting it properly installed.</p>
 <h2 id="dependencies">Dependencies</h2>
 <ul>
 <li>beautifulsoup4</li>
@@ -123,7 +123,7 @@
 <li>pandas</li>
 </ul>
 <h2 id="distribute-pip">Distribute &amp; Pip</h2>
-<p>Installing tweety is simple with pip.</p>
+<p>Installing tweety is simple with <a href="https://pip.pypa.io/en/stable/">pip</a>.</p>
 <pre><code class="bash">$ pip install tweety
 </code></pre>
 
